fix(visualeditor): 🐛  z-index of .oo-ui-window-frame and .ve-ui-overlay-global

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.core.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.core.less
@@ -98,10 +98,6 @@
 	font-family: var( --font-family-base );
 }
 
-.ve-ui-overlay-global {
-	z-index: @z-index-overlay;
-}
-
 /* ve.ui.Surface.css */
 .ve-ui-surface-source-font {
 	font-family: var( --font-family-monospace );
