--- a/skinStyles/ooui/oojs-ui-windows.less
+++ b/skinStyles/ooui/oojs-ui-windows.less
@@ -64,7 +64,6 @@ body > .oo-ui-windowManager {
 }
 
 .oo-ui-windowManager-modal > .oo-ui-dialog > .oo-ui-window-frame {
-	z-index: @z-index-overlay + 1;
 	background-color: var( --color-surface-1 );
 }
 
